--- a/.github/actions/check-steps/action.yml
+++ b/.github/actions/check-steps/action.yml
@@ -3,6 +3,10 @@ description: "Initial checks"
 inputs:
   step:
     description: "What step"
+  skip_branch_check:
+    description: "Skip branch check"
+    required: false
+    default: false
 
 runs:
   using: composite
@@ -27,7 +31,7 @@ runs:
       shell: bash
       run: exit 1
 
-    - name: Check if branch is correct
-      if: github.ref_type == 'branch' && github.ref_name != 'lesson/${{ name.step }}'
+    - name: Check if branch isn't correct
+      if: ${{ !inputs.skip_branch_check && github.ref_type == 'branch' && github.ref_name != 'lesson/' + inputs.step }}
       shell: bash
       run: exit 1
