--- a/.github/workflows/0-step.yml
+++ b/.github/workflows/0-step.yml
@@ -16,40 +16,23 @@ jobs:
     name: Get current step number
     runs-on: ubuntu-latest
     steps:
+      # Needed so we can read the step number from -step.txt
       - name: Checkout
         uses: actions/checkout@v4
         with:
           sparse-checkout: |
             .github/steps/-step.txt
+            .github/actions/check-steps/action.yml
           sparse-checkout-cone-mode: false
 
-      - id: get_step
-        run: |
-          current_step=0
-
-          if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]; then
-            echo "The workflow was triggered manually"
-            echo "CURRENT_STEP=$current_step" >> $GITHUB_OUTPUT
-          else
-            echo "The workflow was triggered by the repo getting 'starred'"
-            echo "CURRENT_STEP=$(cat ./.github/steps/-step.txt)" >> $GITHUB_OUTPUT
-          fi
-    outputs:
-      current_step: ${{ steps.get_step.outputs.current_step }}
+      - name: Check step
+        uses: ./.github/actions/check-steps
+        with:
+          step: 0
+          skip_branch_check: true
 
   main:
     needs: get_current_step
-
-    # We will only run this action when:
-    # 1. This repository isn't the template repository.
-    # 2. The step is currently 0.
-    # Reference: https://docs.github.com/en/actions/learn-github-actions/contexts
-    # Reference: https://docs.github.com/en/actions/learn-github-actions/expressions
-    if: >-
-      ${{ !github.event.repository.is_template
-          && needs.get_current_step.outputs.current_step == 0 }}
-
-    # We'll run Ubuntu for performance instead of Mac or Windows.
     runs-on: ubuntu-latest
 
     steps:
