--- a/.github/workflows/1-step.yml
+++ b/.github/workflows/1-step.yml
@@ -11,13 +11,12 @@ permissions:
   contents: write
 
 jobs:
-  # Get the current step to only run the main job when the learner is on the same step.
-  check_conditions:
+  check_step:
+    name: Check step
     runs-on: ubuntu-latest
-    if: github.event_name != 'workflow_dispatch'
     steps:
       # Needed so we can read the step number from -step.txt
-      - name: Checkout
+      - name: Checkout step file from repo
         uses: actions/checkout@v4
         with:
           sparse-checkout: |
@@ -25,9 +24,7 @@ jobs:
             .github/actions/check-steps/action.yml
           sparse-checkout-cone-mode: false
 
-      # Needed so we can read the step number from -step.txt
-      - name: Check step
-        uses: ./.github/actions/check-steps
+      - uses: ./.github/actions/check-steps
         with:
           step: 1
 
