--- a/.github/workflows/0-step.yml
+++ b/.github/workflows/0-step.yml
@@ -12,12 +12,12 @@ permissions:
   contents: write
 
 jobs:
-  get_current_step:
-    name: Get current step number
+  check_step:
+    name: Check step
     runs-on: ubuntu-latest
     steps:
       # Needed so we can read the step number from -step.txt
-      - name: Checkout
+      - name: Checkout step file from repo
         uses: actions/checkout@v4
         with:
           sparse-checkout: |
@@ -25,14 +25,13 @@ jobs:
             .github/actions/check-steps/action.yml
           sparse-checkout-cone-mode: false
 
-      - name: Check step
-        uses: ./.github/actions/check-steps
+      - uses: ./.github/actions/check-steps
         with:
           step: 0
           skip_branch_check: true
 
   main:
-    needs: get_current_step
+    needs: check_step
     runs-on: ubuntu-latest
 
     steps:
