--- a/.github/workflows/5-step.yml
+++ b/.github/workflows/5-step.yml
@@ -38,7 +38,7 @@ jobs:
           step: 5
 
   main:
-    needs: check_conditions
+    needs: check_step
     runs-on: ubuntu-latest
     if: github.event_name == 'workflow_dispatch' || success()
     steps:
