--- a/.github/workflows/3-step.yml
+++ b/.github/workflows/3-step.yml
@@ -29,7 +29,7 @@ jobs:
           step: 3
 
   main:
-    needs: check_conditions
+    needs: check_step
     runs-on: ubuntu-latest
     if: github.event_name == 'workflow_dispatch' || success()
     steps:
