--- a/.github/workflows/1-step.yml
+++ b/.github/workflows/1-step.yml
@@ -47,7 +47,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           from_step: 1
           to_step: 2
-          branch_name: lesson/1
+          branch_name: step
 
       # Add three commits to the my-first-branch branch.
       # - name: Add chapter2 commits
