--- a/.github/actions/check-steps/action.yml
+++ b/.github/actions/check-steps/action.yml
@@ -11,6 +11,15 @@ inputs:
 runs:
   using: composite
   steps:
+    # Needed so we can read the step number from -step.txt
+    - name: Checkout step file from repo
+      uses: actions/checkout@v4
+      with:
+        sparse-checkout: |
+          .github/steps/-step.txt
+          .github/actions/check-steps/action.yml
+        sparse-checkout-cone-mode: false
+
     - id: get_step
       shell: bash
       run: echo "step=$(cat ./.github/steps/-step.txt)" >> $GITHUB_OUTPUT
