--- a/.github/workflows/4-step.yml
+++ b/.github/workflows/4-step.yml
@@ -45,4 +45,4 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           from_step: 4
           to_step: 5
-          branch_name: lesson/4
+          branch_name: step
