--- a/.github/workflows/_customize_repo.yml
+++ b/.github/workflows/_customize_repo.yml
@@ -38,8 +38,9 @@ jobs:
 
       - name: Commit changes
         run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "info@github.com"
+          git config user.name github-actions[bot]
+          git config user.email github-actions[bot]@users.noreply.github.com
+
           git add .
           git commit -m "Replace ${{ inputs.from_name }} with ${{ inputs.to_name }}"
           git push
