--- a/.github/workflows/3-step.yml
+++ b/.github/workflows/3-step.yml
@@ -46,4 +46,4 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           from_step: 3
           to_step: 4
-          branch_name: step
+          base_branch_name: step
