--- a/.github/actions/check-steps/action.yml
+++ b/.github/actions/check-steps/action.yml
@@ -17,7 +17,7 @@ runs:
   steps:
     # Create new branch with no files
     - id: create_branch
-      if: inputs.initialize_step_file == true
+      if: ${{ inputs.initialize_step_file == true }}
       shell: bash
       run: |
         git config user.name github-actions[bot]
