--- a/.github/workflows/0-step.yml
+++ b/.github/workflows/0-step.yml
@@ -24,7 +24,8 @@ jobs:
             .github/actions/check-steps/action.yml
           sparse-checkout-cone-mode: false
 
-      - uses: ./.github/actions/check-steps
+      - name: Run checks
+        uses: ./.github/actions/check-steps
         with:
           step: 0
           initialize_step_file: true
