--- a/.github/workflows/5-step.yml
+++ b/.github/workflows/5-step.yml
@@ -1,4 +1,4 @@
-name: Step 5
+name: Lesson - Step 5
 
 # This step listens for the learner to open a pull request with branch `my-first-branch`.
 # This workflow updates from step 3 to step 4.
@@ -34,7 +34,8 @@ jobs:
             .github/actions/check-steps/action.yml
           sparse-checkout-cone-mode: false
 
-      - uses: ./.github/actions/check-steps
+      - name: Run checks
+        uses: ./.github/actions/check-steps
         with:
           step: 5
 
