--- a/.github/workflows/_reset.yml
+++ b/.github/workflows/_reset.yml
@@ -1,5 +1,4 @@
 name: Admin - Reset repo
-description: Used to reinitialize the repository for new deployments
 
 on:
   workflow_dispatch:
@@ -40,11 +39,11 @@ jobs:
 
       - name: Update client name in *.md
         run: |
-          find . -type f -name "*.md" -exec sed -i "s/{{CLIENT_NAME}}/${{ inputs.to_name }}/g" {} +
+          find . -type f -name "*.md" -exec sed -i "s/_CLIENT_NAME_/${{ inputs.to_name }}/g" {} +
 
       - name: Update client name in *.html
         run: |
-          find . -type f -name "*.html" -exec sed -i "s/${{CLIENT_NAME}}/${{ inputs.to_name }}/g" {} +
+          find . -type f -name "*.html" -exec sed -i "s/$_CLIENT_NAME_/${{ inputs.to_name }}/g" {} +
 
       - name: Set step to 0
         run: echo "0" > ./.github/steps/-step.txt
