--- a/.github/workflows/0-step.yml
+++ b/.github/workflows/0-step.yml
@@ -24,6 +24,9 @@ jobs:
             .github/actions/check-steps/action.yml
           sparse-checkout-cone-mode: false
 
+      - name: Debug
+        run: echo '${{ toJson(github) }}'
+
       - name: Run checks
         uses: ./.github/actions/check-steps
         with:
