--- a/.github/workflows/_reset.yml
+++ b/.github/workflows/_reset.yml
@@ -26,10 +26,10 @@ jobs:
         run: |
           # Rename main branch to main-old
           git branch -m main main-old
-          git switch main-old
-          git push -u origin main-old
+          git push -u origin main-old --force
 
           git switch develop
+
 
           # Checkout first commit in repository
           git checkout $(git rev-list --max-parents=0 HEAD)
