--- a/.github/workflows/_reset.yml
+++ b/.github/workflows/_reset.yml
@@ -2,10 +2,9 @@ name: Admin - Reset repo
 
 on:
   workflow_dispatch:
-    inputs:
-      to_name:
-        description: 'To name'
-        required: true
+  push:
+    branches:
+      - develop
 
 # Reference: https://docs.github.com/en/actions/security-guides/automatic-token-authentication
 permissions:
@@ -41,13 +40,12 @@ jobs:
           # Create new main branch
           git switch -c main
 
-      - name: Update client name in *.md
+      - name: Update client name in *.md and *.html
         run: |
-          find . -type f -name "*.md" -exec sed -i "s/_CLIENT_NAME_/${{ inputs.to_name }}/g" {} +
-
-      - name: Update client name in *.html
-        run: |
-          find . -type f -name "*.html" -exec sed -i "s/$_CLIENT_NAME_/${{ inputs.to_name }}/g" {} +
+          find . -type f -name "*.md" -exec sed -i "s/_CLIENT_NAME_/${{ vars.CLIENT_NAME }}/g" {} +
+          find . -type f -name "*.html" -exec sed -i "s/$_CLIENT_NAME_/${{ vars.CLIENT_NAME }}/g" {} +
+        env:
+          CLIENT_NAME: ${{ vars.CLIENT_NAME }}
 
       - name: Set step to 0
         run: echo "0" > ./.github/steps/-step.txt
@@ -58,5 +56,7 @@ jobs:
           git config user.email github-actions[bot]@users.noreply.github.com
 
           git add .
-          git commit -m "Reinitialized repository for ${{ inputs.to_name }}" --amend
+          git commit -m "Reinitialized repository for ${{ vars.CLIENT_NAME }}" --amend
           git push origin main --force
+        env:
+          CLIENT_NAME: ${{ vars.CLIENT_NAME }}
